# cyril

./: .gitignore  CMakeLists.txt  CyrilTouchOSC.touchosc  EditorEvaluator.cpp  EditorEvaluator.h  LICENSE.md  README.md  addons.make  cyril-logo.icns  openFrameworks-Info.plist
addons/ofxBeat/: README.md
addons/ofxBeat/ofxBeatExample/: addons.make
addons/ofxBeat/ofxBeatExample/ofxBeatExample.xcodeproj/: project.pbxproj
addons/ofxBeat/ofxBeatExample/ofxBeatExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
addons/ofxBeat/ofxBeatExample/ofxBeatExample.xcodeproj/project.xcworkspace/xcuserdata/darren.xcuserdatad/: UserInterfaceState.xcuserstate
addons/ofxBeat/ofxBeatExample/ofxBeatExample.xcodeproj/xcshareddata/xcschemes/: ofxBeatExample Debug.xcscheme  ofxBeatExample Release.xcscheme
addons/ofxBeat/ofxBeatExample/src/: testApp.cpp  testApp.h
addons/ofxBeat/src/: fft.cpp  fft.h  ofxBeat.cpp  ofxBeat.h
addons/ofxEditor/: LICENSE.md  README.md
addons/ofxEditor/ofxEditorExample/: addons.make
addons/ofxEditor/ofxEditorExample/ofxEditorExample.xcodeproj/: project.pbxproj
addons/ofxEditor/ofxEditorExample/ofxEditorExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
addons/ofxEditor/ofxEditorExample/ofxEditorExample.xcodeproj/project.xcworkspace/xcuserdata/darren.xcuserdatad/: UserInterfaceState.xcuserstate
addons/ofxEditor/ofxEditorExample/ofxEditorExample.xcodeproj/xcshareddata/xcschemes/: ofxEditorExample Debug.xcscheme  ofxEditorExample Release.xcscheme
addons/ofxEditor/ofxEditorExample/src/: testApp.cpp  testApp.h
addons/ofxEditor/src/: ClipBoard.cpp  ClipBoard.h  EditorBuffer.cpp  EditorBuffer.h  ofxEditor.cpp  ofxEditor.h
addons/ofxPostProcessing/src/: DofPass.h  PostProcessing.h  RenderPass.h
cmake/: addons.cmake  openFrameworks.cmake
cyril.xcodeproj/: project.pbxproj
cyril.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cyril.xcodeproj/project.xcworkspace/xcuserdata/darren.xcuserdatad/: UserInterfaceState.xcuserstate
cyril.xcodeproj/xcshareddata/xcschemes/: cyril Debug.xcscheme  cyril Release.xcscheme
cyril.xcodeproj/xcuserdata/darren.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cyril.xcodeproj/xcuserdata/darren.xcuserdatad/xcschemes/: xcschememanagement.plist
cyril/Images.xcassets/AppIcon.appiconset/: Contents.json
data/code/: 1.cy  2.cy  3.cy  4.cy  6.cy  9.cy
lib/libtess2/: CMakeLists.txt
lib/openFrameworks/: README.md  ofMain.h
lib/openFrameworks/app/: ofAppGLFWWindow.cpp  ofAppGLFWWindow.h
lib/openFrameworks/types/: ofBaseTypes.h
src/: ShaderEvaluator.cpp  ShaderEvaluator.h  cmds.h  cyrilApp.cpp  cyrilApp.h  main.cpp  test.cpp
src/Cyril/: Cyril.cpp  Cyril.h  CyrilBloom.cpp  CyrilBloom.h  CyrilEvaluator.cpp  CyrilEvaluator.h  CyrilOp.cpp  CyrilOp.h  CyrilParser.cpp  CyrilParser.h  CyrilPixelate.cpp  CyrilPixelate.h  CyrilProg.cpp  CyrilProg.h  CyrilShader.cpp  CyrilShader.h  CyrilShell.cpp  CyrilShell.h  CyrilState.cpp  CyrilState.h  cyril.lpp  cyril.ypp
src/Cyril/Funs/: CyrilCosFun.cpp  CyrilCosFun.h  CyrilFftFun.cpp  CyrilFftFun.h  CyrilFun.cpp  CyrilFun.h  CyrilHsbFun.cpp  CyrilHsbFun.h  CyrilLerpFun.cpp  CyrilLerpFun.h  CyrilMapFun.cpp  CyrilMapFun.h  CyrilMouseFun.cpp  CyrilMouseFun.h  CyrilNoiseFun.cpp  CyrilNoiseFun.h  CyrilPaletteFun.cpp  CyrilPaletteFun.h  CyrilRandFun.cpp  CyrilRandFun.h  CyrilSinFun.cpp  CyrilSinFun.h  CyrilTanFun.cpp  CyrilTanFun.h  CyrilWaveFun.cpp  CyrilWaveFun.h
src/Cyril/Lang/: CyrilAssign.h  CyrilColorLoad.cpp  CyrilColorLoad.h  CyrilDebugOp.cpp  CyrilDebugOp.h  CyrilDo.h  CyrilFor.h  CyrilHexColor.h  CyrilIf.h  CyrilList.h  CyrilLoad.h  CyrilNamedColor.h  CyrilPush.h  CyrilUnaryOp.h  CyrilWhile.h
src/Cyril/Ops/: CyrilAnimStep.cpp  CyrilAnimStep.h  CyrilAnimation.cpp  CyrilAnimation.h  CyrilBackgroundOp.cpp  CyrilBackgroundOp.h  CyrilBallDetailOp.cpp  CyrilBallDetailOp.h  CyrilBallOp.cpp  CyrilBallOp.h  CyrilBinaryOp.h  CyrilBlink.cpp  CyrilBlink.h  CyrilBoxOp.cpp  CyrilBoxOp.h  CyrilColorOp.cpp  CyrilColorOp.h  CyrilConeOp.cpp  CyrilConeOp.h  CyrilDie.h  CyrilFillOp.cpp  CyrilFillOp.h  CyrilGridOp.cpp  CyrilGridOp.h  CyrilImgOp.cpp  CyrilImgOp.h  CyrilInitOp.cpp  CyrilInitOp.h  CyrilKaleidoscope.cpp  CyrilKaleidoscope.h  CyrilLightOp.cpp  CyrilLightOp.h  CyrilLineOp.cpp  CyrilLineOp.h  CyrilMoveOp.cpp  CyrilMoveOp.h  CyrilNoFillOp.cpp  CyrilNoFillOp.h  CyrilNoiseWarp.cpp  CyrilNoiseWarp.h  (+32 more)
src/Engine/: Palette.cpp  Palette.h  Particle.cpp  Particle.h
